feat: added get event details
