# backend/docs/swagger.yaml
@@ -54,8 +54,6 @@ definitions:
     properties:
       company:
         $ref: '#/definitions/model.Company'
-      company_id:
-        type: integer
       created_at:
         type: string
       dates:
@@ -63,20 +61,39 @@ definitions:
           format: date-time
           type: string
         type: array
+      event_responses:
+        items:
+          $ref: '#/definitions/model.EventResponse'
+        type: array
       event_type:
         $ref: '#/definitions/model.EventType'
-      event_type_id:
-        type: integer
       id:
         type: string
       location:
+        type: string
+      status:
         type: string
       updated_at:
         type: string
       user:
         $ref: '#/definitions/model.User'
-      user_id:
-        type: integer
+    type: object
+  model.EventResponse:
+    properties:
+      created_at:
+        type: string
+      event:
+        $ref: '#/definitions/model.Event'
+      id:
+        type: string
+      remarks:
+        type: string
+      status:
+        type: string
+      updated_at:
+        type: string
+      vendor:
+        $ref: '#/definitions/model.Vendor'
     type: object
   model.EventType:
     properties:
@@ -248,6 +265,32 @@ paths:
       responses:
         "201":
           description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      security:
+      - BearerAuth: []
+      tags:
+      - event
+  /events/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Find event by secure id
+      parameters:
+      - description: Secure ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Event'
         "400":
           description: Bad Request
           schema:
